CHANGES BETWEEN 2.13.0 and 2.13.1 (2023-XXX-XX)

  I. MISCELLANEOUS

  - New function  `FT_Get_Default_Named_Instance` to get the  index of
    the default named instance of an OpenType Variation Font.


======================================================================

CHANGES BETWEEN 2.12.1 and 2.13.0 (2023-Feb-09)

  I. IMPORTANT CHANGES

  - The demo program `ftinspect` has  been completely updated and much
    enhanced.  It now  combines the functionality of  almost all other
    graphical FreeType  demo programs into a  single application based
    on the Qt framework.  This was Charlie Jiang's GSoC 2022 project.

  - The 'COLR' v1 API is now considered as stable.

      https://learn.microsoft.com/en-us/typography/opentype/spec/colr


  II. MISCELLANEOUS

  - For  OpenType  Variable Fonts,  `avar`  table  format 2.0  is  now
    supported.  The code was contributed by Behdad Esfahbod.

    Note that this is an extension supported on recent Apple platforms
    and by HarfBuzz, but not yet in the OpenType standard!  See

      https://github.com/harfbuzz/boring-expansion-spec/blob/main/avar2.md

    for the specification.  To deactivate it, define the configuration
    macro 'TT_CONFIG_OPTION_NO_BORING_EXPANSION'.

  - A new API  `FT_GlyphSlot_Slant` to slant a glyph by  a given angle
    has been added.   Note that this function is  part of `ftsynth.h`,
    which is still considered to be in alpha stage.

  - TrueType interpreter version 38  (also known as 'Infinality') that
    was first introduced about 10 years  ago in FreeType 2.4.11 is now
    deprecated and slated to be removed in the next version.  TrueType
    interpreter version 40 has been FreeType's default version for six
    years now and provides an excellent alternative.  This is the last
    FreeType     version     with    TT_INTERPRETER_VERSION_38     and
    TT_INTERPRETER_VERSION_40 treated differently.

  - The  only  referenced  but never  documented  configuration  macro